feat: add crud endpoints (#5)
