# docs/swagger.json
@@ -46,7 +46,7 @@
                 "parameters": [
                     {
                         "description": "DTO for Album creation",
-                        "name": "data",
+                        "name": "Body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -60,6 +60,63 @@
                         "schema": {
                             "$ref": "#/definitions/album.Album"
                         }
+                    }
+                }
+            }
+        },
+        "/albums/{id}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Albums"
+                ],
+                "summary": "Update a album",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of Item",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "DTO for update the album",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/album.albumDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Albums"
+                ],
+                "summary": "Delete a album Album",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of Item",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": ""
                     }
                 }
             }
