# main.go
@@ -16,6 +16,8 @@ func main() {
 	router := gin.Default()
 	router.GET("/albums", album.GetAlbums)
 	router.POST("/albums", album.CreateAlbum)
+	router.DELETE("/albums/:id", album.DeleteByID)
+	router.PUT("/albums/:id", album.UpdateByID)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	router.Run(":3000")
